build no compression

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/DungeonGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/DungeonGL.data.br",
-        frameworkUrl: buildUrl + "/DungeonGL.framework.js.br",
-        codeUrl: buildUrl + "/DungeonGL.wasm.br",
+        dataUrl: buildUrl + "/DungeonGL.data",
+        frameworkUrl: buildUrl + "/DungeonGL.framework.js",
+        codeUrl: buildUrl + "/DungeonGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Dungeons",
