--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Dungeons</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
-</head>
+  </head>
   <body>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600></canvas>
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/DgL3.loader.js";
+      var loaderUrl = buildUrl + "/DGL2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/DgL3.data",
-        frameworkUrl: buildUrl + "/DgL3.framework.js",
-        codeUrl: buildUrl + "/DgL3.wasm",
+        dataUrl: buildUrl + "/DGL2.data",
+        frameworkUrl: buildUrl + "/DGL2.framework.js",
+        codeUrl: buildUrl + "/DGL2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Dungeons",
