--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Dungeons</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <style>
+    body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
+  
+      canvas {
+        display: block;
+      }
+    </style>
+
     <script>
      // Add JavaScript for better mobile keyboard handling
        document.addEventListener('click', function (event) {
