Added names and fixes

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/DGL2.loader.js";
+      var loaderUrl = buildUrl + "/DungeonsGit.loader.js";
       var config = {
-        dataUrl: buildUrl + "/DGL2.data",
-        frameworkUrl: buildUrl + "/DGL2.framework.js",
-        codeUrl: buildUrl + "/DGL2.wasm",
+        dataUrl: buildUrl + "/DungeonsGit.data",
+        frameworkUrl: buildUrl + "/DungeonsGit.framework.js",
+        codeUrl: buildUrl + "/DungeonsGit.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Dungeons",
